export const snapshot = {};

snapshot[`Issue View Command - Help Text 1`] = `
stdout:
"
Usage: view [issueId]

Description:

  View issue details (default) or open in browser/app

Options:

  -h, --help               - Show this help.                                 
  -w, --web                - Open in web browser                             
  -a, --app                - Open in Linear.app                              
  --no-comments            - Exclude comments from the output                
  --show-resolved-threads  - Include resolved comment threads in the output  
  --no-pager               - Disable automatic paging for long output        
  -j, --json               - Output issue data as JSON                       
  --no-download            - Keep remote URLs instead of downloading files   

"
stderr:
""
`;

snapshot[`Issue View Command - With Mock Server Terminal No Comments 1`] = `
stdout:
"# TEST-123: Fix authentication bug in login flow

**State:** In Progress | **Priority:** --- | **Assignee:** Unassigned

Users are experiencing issues logging in when their session expires. This affects the main authentication flow and needs to be resolved quickly.

## Steps to reproduce
1. Log in to the application
2. Wait for session to expire
3. Try to perform an authenticated action
4. Observe the error

## Expected behavior
User should be redirected to login page with clear messaging.

## Actual behavior
User sees cryptic error message and gets stuck.
"
stderr:
""
`;

snapshot[`Issue View Command - With No Comments Flag 1`] = `
stdout:
"# TEST-123: Fix authentication bug in login flow

**State:** In Progress | **Priority:** ▄▆█ | **Assignee:** @Jane Smith

Users are experiencing issues logging in when their session expires.
"
stderr:
""
`;

snapshot[`Issue View Command - With Comments Default 1`] = `
stdout:
"# TEST-123: Fix authentication bug in login flow

**State:** In Progress | **Priority:** ⚠⚠⚠ | **Assignee:** @John Doe

Users are experiencing issues logging in when their session expires.

## Comments

- **@John Doe** - *1/15/2024* [thread: comment-1]

  I've reproduced this issue on staging. The session timeout seems to be too aggressive.

  - **@Jane Smith** - *1/15/2024*

    Working on a fix. Will increase the session timeout and add proper error handling.

  - **@Alice Developer** - *1/15/2024*

    Sounds good! Also, we should add better error messaging for expired sessions.

- **@Bob Senior** - *1/15/2024* [thread: comment-4]

  Should we also consider implementing automatic session refresh?


"
stderr:
""
`;

snapshot[`Issue View Command - With Documents And Attachments 1`] = `
stdout:
"# TEST-246: Audit issue resource output

**State:** In Progress | **Priority:** ▄▆█ | **Assignee:** @Jane Smith

Ensure issue view shows both attachments and documents.

## Attachments

- **Design mock**: https://example.com/design-mock _[figma]_
  _Figma file_


## Documents

- **Implementation plan**: https://linear.app/test-team/document/implementation-plan-impl-plan-123
- **QA checklist**: https://linear.app/test-team/document/qa-checklist-qa-checklist-456

"
stderr:
""
`;

snapshot[`Issue View Command - Issue Not Found 1`] = `
stdout:
""
stderr:
"✗ Failed to view issue: Issue not found: TEST-999
"
`;

snapshot[`Issue View Command - JSON Output No Comments 1`] = `
stdout:
'{
  "identifier": "TEST-123",
  "title": "Fix authentication bug in login flow",
  "description": "Users are experiencing issues logging in when their session expires.",
  "url": "https://linear.app/test-team/issue/TEST-123/fix-authentication-bug-in-login-flow",
  "branchName": "fix/test-123-auth-bug",
  "state": {
    "name": "In Progress",
    "color": "#f87462"
  },
  "assignee": null,
  "priority": 3,
  "parent": null,
  "children": {
    "nodes": []
  },
  "attachments": {
    "nodes": []
  }
}
'
stderr:
""
`;

snapshot[`Issue View Command - JSON Output With Comments 1`] = `
stdout:
\`{
  "identifier": "TEST-123",
  "title": "Fix authentication bug in login flow",
  "description": "Users are experiencing issues logging in when their session expires.",
  "url": "https://linear.app/test-team/issue/TEST-123/fix-authentication-bug-in-login-flow",
  "branchName": "fix/test-123-auth-bug",
  "state": {
    "name": "In Progress",
    "color": "#f87462"
  },
  "assignee": {
    "name": "jane.smith",
    "displayName": "Jane Smith"
  },
  "priority": 2,
  "project": null,
  "projectMilestone": null,
  "parent": null,
  "children": {
    "nodes": []
  },
  "comments": {
    "nodes": [
      {
        "id": "comment-1",
        "body": "I've reproduced this issue on staging. The session timeout seems to be too aggressive.",
        "createdAt": "2024-01-15T10:30:00Z",
        "user": {
          "name": "john.doe",
          "displayName": "John Doe"
        },
        "externalUser": null,
        "parent": null
      },
      {
        "id": "comment-2",
        "body": "Working on a fix. Will increase the session timeout and add proper error handling.",
        "createdAt": "2024-01-15T14:22:00Z",
        "user": {
          "name": "jane.smith",
          "displayName": "Jane Smith"
        },
        "externalUser": null,
        "parent": {
          "id": "comment-1"
        }
      }
    ]
  },
  "attachments": {
    "nodes": []
  }
}
\`
stderr:
""
`;

snapshot[`Issue View Command - JSON Output With Documents And Attachments 1`] = `
stdout:
'{
  "identifier": "TEST-246",
  "title": "Audit issue resource output",
  "description": "Ensure issue view shows both attachments and documents.",
  "url": "https://linear.app/test-team/issue/TEST-246/audit-issue-resource-output",
  "branchName": "test-246-issue-resource-output",
  "state": {
    "name": "In Progress",
    "color": "#f87462"
  },
  "assignee": {
    "name": "jane.smith",
    "displayName": "Jane Smith"
  },
  "priority": 2,
  "project": null,
  "projectMilestone": null,
  "cycle": null,
  "parent": null,
  "children": {
    "nodes": []
  },
  "attachments": {
    "nodes": [
      {
        "id": "attachment-1",
        "title": "Design mock",
        "url": "https://example.com/design-mock",
        "subtitle": "Figma file",
        "sourceType": "figma",
        "metadata": {},
        "createdAt": "2024-01-15T10:30:00Z"
      }
    ]
  },
  "documents": {
    "nodes": [
      {
        "id": "document-1",
        "title": "Implementation plan",
        "slugId": "impl-plan-123",
        "url": "https://linear.app/test-team/document/implementation-plan-impl-plan-123",
        "createdAt": "2024-01-15T09:30:00Z",
        "updatedAt": "2024-01-15T09:45:00Z"
      },
      {
        "id": "document-2",
        "title": "QA checklist",
        "slugId": "qa-checklist-456",
        "url": "https://linear.app/test-team/document/qa-checklist-qa-checklist-456",
        "createdAt": "2024-01-15T09:00:00Z",
        "updatedAt": "2024-01-15T09:15:00Z"
      }
    ]
  }
}
'
stderr:
""
`;

snapshot[`Issue View Command - With Parent And Sub-issues 1`] = `
stdout:
"# TEST-456: Implement user authentication

**State:** In Progress | **Priority:** ▄▆█ | **Assignee:** @Alice Developer

Add user authentication to the application.

## Parent

- **TEST-100**: Epic: Security Improvements _[In Progress]_


## Sub-issues

- **TEST-457**: Add login form _[Done]_
- **TEST-458**: Add password reset flow _[Todo]_
- **TEST-459**: Add OAuth support _[In Progress]_

"
stderr:
""
`;

snapshot[`Issue View Command - With Project And Milestone 1`] = `
stdout:
"# TEST-789: Add monitoring dashboards

**State:** In Progress | **Priority:** ▄▆  | **Assignee:** @Bob Senior | **Project:** Platform Infrastructure Q1 | **Milestone:** Phase 2: Observability

Set up Datadog dashboards for the new service.
"
stderr:
""
`;

snapshot[`Issue View Command - With Cycle 1`] = `
stdout:
"# TEST-890: Implement rate limiting

**State:** Todo | **Priority:** ▄   | **Assignee:** Unassigned | **Project:** API Gateway v2 | **Cycle:** Sprint 7

Add rate limiting to the API gateway.
"
stderr:
""
`;

snapshot[`Issue View Command - Hides Resolved Threads By Default 1`] = `
stdout:
"# TEST-321: Audit resolved comment thread output

**State:** In Progress | **Priority:** ▄▆█ | **Assignee:** Unassigned

Check how issue view handles resolved comment threads.

## Comments

- **@John Doe** - *1/15/2024* [thread: comment-root-open]

  Open thread root comment.

  - **@Jane Smith** - *1/15/2024*

    Reply on the open thread.



Resolved thread hidden: 1. Use --show-resolved-threads to show them.
"
stderr:
""
`;

snapshot[`Issue View Command - Show Resolved Threads 1`] = `
stdout:
"# TEST-321: Audit resolved comment thread output

**State:** In Progress | **Priority:** ▄▆█ | **Assignee:** Unassigned

Check how issue view handles resolved comment threads.

## Comments

- **@John Doe** - *1/15/2024* [thread: comment-root-open]

  Open thread root comment.

  - **@Jane Smith** - *1/15/2024*

    Reply on the open thread.

- **@Alice Developer** - *1/15/2024* [thread: comment-root-resolved] [resolved]

  Resolved thread root comment.


"
stderr:
""
`;

snapshot[`Issue View Command - JSON Output With Resolved Thread Metadata 1`] = `
stdout:
'{
  "identifier": "TEST-654",
  "title": "Expose resolved thread metadata",
  "description": "Test JSON output for resolved thread data.",
  "url": "https://linear.app/test-team/issue/TEST-654/expose-resolved-thread-metadata",
  "branchName": "test-654-resolved-thread-json",
  "state": {
    "name": "Backlog",
    "color": "#bec2c8"
  },
  "assignee": null,
  "priority": 0,
  "project": null,
  "projectMilestone": null,
  "cycle": null,
  "parent": null,
  "children": {
    "nodes": []
  },
  "comments": {
    "nodes": [
      {
        "id": "comment-root-json",
        "body": "Resolved root comment.",
        "createdAt": "2024-01-15T10:30:00Z",
        "url": "https://linear.app/issue/TEST-654#comment-root-json",
        "resolvedAt": "2024-01-15T11:00:00Z",
        "resolvingCommentId": null,
        "resolvingUser": {
          "name": "john.doe",
          "displayName": "John Doe"
        },
        "user": {
          "name": "john.doe",
          "displayName": "John Doe"
        },
        "externalUser": null,
        "parent": null
      },
      {
        "id": "comment-reply-json",
        "body": "Reply under the resolved thread.",
        "createdAt": "2024-01-15T10:45:00Z",
        "url": "https://linear.app/issue/TEST-654#comment-reply-json",
        "resolvedAt": null,
        "resolvingCommentId": null,
        "resolvingUser": null,
        "user": {
          "name": "jane.smith",
          "displayName": "Jane Smith"
        },
        "externalUser": null,
        "parent": {
          "id": "comment-root-json"
        }
      }
    ]
  },
  "attachments": {
    "nodes": []
  }
}
'
stderr:
""
`;
